@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Allow to synchronize shared task lists via CalDAV (Request #12380).
 * [jan] Add script to import tasks from Open-Xchange.
 * [jan] Add recurrence controls to basic view (Request #11545).
 * [mjr] Add button for creating sub-task from task view (Request #12309).
@@ -1479,6 +1480,7 @@
    <date>2014-03-20</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [jan] Allow to synchronize shared task lists via CalDAV (Request #12380).
 * [jan] Add script to import tasks from Open-Xchange.
 * [jan] Add recurrence controls to basic view (Request #11545).
 * [mjr] Add button for creating sub-task from task view (Request #12309).
